<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY APP_NAME "Football Apps">]>
<resources>
    <string name="app_name">&APP_NAME;</string>

    <string name="favorites">Favorites</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>

    <string name="match_detail">Match Detail</string>
    <string name="versus">vs</string>
    <string name="away">away</string>
    <string name="home">home</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="search">Search</string>

    <string name="next">Next</string>
    <string name="past">Past</string>

    <string name="overview">Overview</string>
    <string name="player">Player</string>

    <string name="match">Match</string>
    <string name="team">Team</string>

    <string name="added_to_favorite">added to favorite</string>
    <string name="removed_from_favorite">removed to favorite</string>
    <string name="favorites_empty">You have not added anything to favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_description">No description for this team</string>
    <string name="weight">Weight (Kg)</string>
    <string name="height">Height (m)</string>


</resources>
